<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">爱芽妈芽</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- 分享开始 -->
    <string name="share">分享</string>
    <string name="WEIXIN">微信</string>
    <string name="WE_FREND">朋友圈</string>
    <string name="QQ">QQ</string>
    <string name="QQ_ZONE">空间</string>
    <string name="WEIBO">微博</string>

    <!-- 分享结束 -->

    <!--设置 页面 开始 -->
    <string name="tv_set">设置</string>
    <string name="tv_login_and_regist">登陆/注册</string>
    <string name="tv_mwts">美文推送</string>
    <string name="tv_qhzh">切换账号</string>
    <string name="tv_gywm">关于我们</string>
    <string name="tv_bbsj">版本升级</string>
    <string name="tv_version">V 1.0 Beta</string>
    <!-- 设置页面结束 -->

    <string name="login">登陆</string>
    <string name="register">注册</string>

    <string name="cancel">取消</string>
    <string name="confirm">确定</string>

    <!--textView 内容开始 -->
    <string name="tv_login"> 登陆</string>
    <string name="tv_regist"> 注册</string>
    <string name="tv_forget">忘记密码</string>

    <!--button 内容开始 -->
    <string name="bt_get"> 获取</string>
    <string name="bt_login"> 登陆</string>
    <string name="bt_regist"> 注册</string>
    <string name="bt_next"> 下一步</string>
    <string name="bt_save"> 保存</string>
    <!--button 内容结束 -->

    <!--edittext 内容开始 -->
    <string name="et_phone_number">请输入手机号</string>
    <string name="et_write_pass">请输入密码</string>
    <string name="et_write_pass_new">请输入新密码</string>
    <string name="et_write_pass_again">请再次输入新密码</string>
    <string name="et_set_pass">请设置密码</string>
    <string name="et_check_code">请输入验证码</string>
    <!--edittext 内容结束 -->

    <!-- 十二星座 -->
    <string name="tianxie">        
          \t\t\t激动和感情是天蝎座的孩子性格上的主要部分。这一星座的孩子的心理十分复杂和难于理解。沉默寡言、不动声色，但
           内心却慢慢地积累着愿望或不满，并形成潜在的动荡不安因素。 永远不要低估这一星座的孩子，他可能变得最好，也可能
           变得最坏。如果他感到自己受到了中伤或轻视，他就会产生铭心刻骨的不满情绪，致使他固步自封或不求上进，这种情绪
           会一直持续到他成年。 另外，天蝎座的孩子身心蕴藏着一种特殊的力量，在需要做出艰苦努力或发挥才智的时候，这种力
           量就会本能地迸发出来。 \n\t\t\t一切具有神秘色彩的事情都能引起他的兴趣。在医学、化学、历史或者研究工作方面，他会表现
           出天赋。他具有揭示奥秘或弄清迷疑问题的特殊本领。 这是个以自我为中心的人，对人有很大的吸引力，这一点在他青年
           时代就充分表露出来。他常常给周围的人留下深刻的印象。 不要强迫他去做他不愿的事，他需要自己选择要走的路，一旦
           选定了，他会拿出百倍于别人的毅力和勇气去学习和工作。\n\t\t\t 他的理想出路是医学、冶金、警察职业、研究工作、军事、与
           石油或火山有关的职业、工程师、雕塑家或危险性大的职业。 作为父母，应了解到，天蝎座宝宝像是复杂的数学问题，会
           给父母很大的困扰，但是从另一个角度来看，天蝎宝宝也给了父母挑战的乐趣。内心深处富于激情的天蝎宝宝外表却常常
           木讷呆板，父母要能理解发现他沉默寡言下面积累的情绪，及时疏导。不要强迫天蝎宝宝做他不愿做的事，他的强烈自我
           意识会误解父母的心意 ，结果大家都不高兴。给天蝎宝宝充分的信任和自由，他会表现得出乎意料的好。\n\n</string>

    <string name="baiyang"> 
       \t\t\t如果你的白羊座宝宝是提前出生的，这一点也不奇怪：白羊座的孩子总想做领跑的人。他们总在问“怎么还没到啊？”，
       会迫不 及待地赶紧出发，快点到达终点。 白羊座的孩子热情、好动、富有创造力，似乎总比其他孩子有更多的精力。他们的
       旺盛精力刚好有天生的勇敢来匹配。白羊座宝宝斗志昂扬，专注自我。对竞争对手来说，他们这种“争为人先、恐为人后”的态
       度可能会很难对付。 白羊座宝宝出了名地率直诚实，他们看到的事实是怎样的，就会怎样说。 \n\t\t\t他们天性爱冲动，做事前往往不
       会三思而行，因此，可能会把握不好“尺度”。 作为白羊座宝宝的父母，你多半很熟悉什么叫“火爆脾气”。白羊座的孩子很难控
       制自己的情绪。不过，在这方面，他们也有优点：不会记仇。一旦释放了情绪，怒气也就烟消云散了。 白羊座的孩子很善于开
       创一些大工程，但没有同样的热情很好地坚持下来。因此，你需要耐心而严格地引导他，帮助他做到善始善终。 你还要确保你
       的白羊座宝宝得到大量的锻炼。所有运动量大的活动都能很好地释放他的精力。如果是竞技性运动，效果会更好。但一定要给
  他们戴上头盔或其他必要的护具。白羊座的孩子总是着急忙慌，往往比较容易出事故。\n\n</string>
        
    <string name="chunv"> 
       \t\t\t处女座的孩子一般胆子都很小或谨小慎微。身体往往很弱，容易患感染性疾病。身体状况会直接影响到他的学习。
       这是一个不太合群的孩子，喜欢观察和思考，很早就具有了批评精神，并把它作为保护自己的武器，但这很可能发展成为周
       围人恼怒的根源。他有时会不顾现实，而执意陷于纯粹的逻辑思维之中。 处女座的孩子是个好学生，求知欲望很强烈，喜欢积
       累知识。他善于挖掘人的心理和探讨事物的本质，但这也有可能使他趋于只注重细节，而忽略了全局。从而会影响到他未来职
       业的发展。他孜孜不倦地学习，有时会达到忘我的程度。最好多让他到外面去参加体育活动，这样既可以多呼吸新鲜空气，又
       可以促使他与同学多在一起，打成一片，从而避免他孤独感和抑制性心理的滋长。  \n\t\t\t处女座宝宝的理想出路是教育、医学、科学
       、会计、秘书、公职人员、卫生事业和商业，以及一切需要耐心、细致的工作。 作为父母，应了解到，处女座宝宝娇弱纤细，
       像一枝小小的雏菊，做父母的只有加倍照顾和爱护他才行。适当的体育锻炼和群体活动对处女宝宝虽然好，但要照顾他谨小慎
       微的天性，不要强迫他。并不合群的处女宝宝喜欢观察和思考，给他更多的观察对象和机会对他来说是一种快乐。 \n\n</string>
       
    <string name="jinniu"> 
       \t\t\t如果用一句话来概括，你的金牛座宝宝就是人之楷模。即使还是个小婴儿，他们就很甜美、可爱、招人喜爱。
       他们往往也会身体强壮，精神饱满。 尽早带你的宝宝去户外看看吧，因为小金牛在自然的环境中会成长得很茁壮。大一点
       的金牛座孩子通常喜欢照料小花小草或小动物，而且还会相当勤恳地恪守职责。\n\t\t\t 金牛座的孩子通过自己的感官来认识世界
       ：他们喜欢各种东西的味道、触感、声音和气味。事实上，他们从出生那一刻起，就很喜欢吃。不过，他们也可能会特别
       偏爱某几种食物，顽固地拒绝尝试其他新东西。如果是这样，你也别担心。你只需要不动声色地把健康食物拿给他吃，他们
       最终会接受越来越多的食物。但一定不要给他们吃甜味零食，这会妨碍他们原本健康的胃口。  \n\t\t\t即便在小的时候，金牛
       座的孩子也很现实，善于管钱。金牛座的第一需要是安全感，不管是大人还是孩子。金牛座的小宝宝喜欢被用襁褓包着，喜欢
       被抱着，这让他们觉得很安全。有些金牛座宝宝很粘人，有些则很依赖某个能带来安全感的东西，比如小毯子，或者喜欢
       把他们自己的东西藏起来。让你的爱成为他们的避风港湾吧。 　　金牛座的孩子不急不躁，其实可以说是慢条斯理。作为
       父母，你需要调整一下自己的节奏去适应他。一天内不要给他安排太多的活动。也不要指望金牛座的孩子会加快脚步，那是不可能的。 \n\n</string>
       
    <string name="juxie"> 
       \t\t\t你的巨蟹座宝宝觉得待在家里是最舒服的，他喜欢有家人和宠物围绕在身边，周围都是熟悉的画面、声音和气味。
       如果你的家庭生活方式是充满变化的，你的巨蟹座宝宝就需要一些东西作为依靠，比如一块软软的小毯子或是他非常宝贝的毛绒
       玩具。 传统、习惯和规律也会让巨蟹座的孩子感到安慰，所以，你们全家经常一起进餐，并为孩子建立起一套洗澡和睡觉规律
       是非常重要的。\n\t\t\t巨蟹座的孩子天生谨慎、敏感，在嘈杂、混乱的环境中很容易被吓到。你的小不点儿可能更喜欢在
       安静的午后做点儿小点心，而不愿在游乐场中度过一天。 给你的巨蟹座宝宝一盆小植物或一只小动物让他照料，他会知道该怎
       么做，这几乎是他的本能。照顾别人是巨蟹座孩子的天性，所以，如果你的孩子把他发现的每只流浪狗都带回家，你也不要觉得
       奇怪。作为父母，你的任务就是提供一个稳定的家庭生活环境，并给他很多的关爱，因为情感上的安全感是巨蟹座孩子的首先需要的。
       \n\t\t\t 食物对于巨蟹座宝宝来说，也很重要。如果饮食规律、健康、简单，他们会更好地生长。不要给你的孩子吃油腻
       或不好消化的食物，这会破坏孩子敏感的消化系统。 最后，你要给巨蟹座宝宝私人空间。巨蟹座的孩子感情上比别人更脆弱，当
       他们感到害怕时，会缩进自己小小的保护壳里，直到危险解除，他们才出来。让他们以自己的方式保护自己吧，之后你要温柔地
       鼓励他们说出自己的感受。\n\n</string>
 
 <string name="mojie"> 
       \t\t\t魔羯座的孩子的思想成熟得特别早，很小就进入成年人的行列，经常对人和事物产生防御心理。 在学校时魔羯座
       宝宝有可能是一个较孤独的孩子，这容易使他产生深刻的伤感情绪。为此，应该督促他到室外去和同学们在一起，谈笑风生、
       抒展心情，这样可使他身心不至沉重呆板。 魔羯座的孩子热爱学习，有自己积累知识的方法和严格的组织纪律观念。\n\t\t\t 喜欢收集
       和归类。这是个学习、工作和生活有条不紊，过分追求完美的孩子，无论任何事他都希望做得精益求精，这些优秀品质将会帮助他走
       上重要的岗位。许多学者和政治家都诞生在这一星座。 魔羯座的孩子非常严肃、认真，不容被人轻待，这是他追求上进的基础。 
       \n\t\t\t 他的理想出路是管理、工业、考古、金融、政治批发贸易以及有关土地、地质等职业。 作为宝宝，应了解到：魔羯
       座宝宝常像个小大人一样说话办事，这使他既不容易被同龄人认同，又不容易被成年人喜爱。父母要理解他这种态度产生的根源，经
       常督促他去参加群体活动，帮他找回他的社会角色。\n\t\t\t 对这样一个心灵较孤独的宝宝，父母就不要再给他心理负担了，而是给他充分的
       赞扬和重视。认真严肃的魔羯宝宝常常会执拗于某种事物，父母需要注意这点注意但是不要粗暴地干涉他。\n\n</string>
       
 <string name="sheshou"> 
       \t\t\t笑容可掬、生气勃勃，十分容易冲动。射手座的孩子需要自由和有益于健康的欢乐。他喜欢骑马、骑摩托车、滑雪
       或坐上小艇去探险，或者到遥远的国度去旅行。 他的主要优点是忠诚和独立精神。如果人们能正确对待和理解他，他会表现得
       十分理智，而且完全可以信任他；但是如果人们强迫他，就再也无法奈何他，他会躲避到另一个虚伪的极端中去。 \n\t\t\t一般地说，
       外界生活要比学习更能吸引他。射手座的孩子特别有语言天才，他总是向往着遥远的地方，外国和旅行将是他命运中不可分割的一部分。
       他喜欢随心所欲的生活方式或事业，而不愿意把自己锁在条条框框中，他也喜欢有机会出头露出的工作。 \n\t\t\t射手座宝宝的最
       好出路是自由职业、军人生活、法律、驻外机构、体育、赛马、商业(尤其是进出口业务)、社会福利事业、法官和教师。 作为父母
       ，应了解到：射手座宝宝生气盎然，他们是父母的开心果，从小就能够善解人意，拥有这样可爱的孩子是父母的幸福。不过，射
       手宝宝具有很强的独立精神，幻想旅行和探险，父母要满足他的需求，使他始终处于动态的生活环境中。倾听和忠诚是射手宝宝的
       优点，做父母的也要给他同样的倾听和忠诚，否则宝宝会因终于承受不了对他的依赖而崩溃的。\n\n</string>
       
 <string name="shizi"> 
       \t\t\t从青年时代起，狮子座的孩子主要性格表现是高傲。此星座的孩子很早就会感到自己有举足轻重的影响。在学校
       里不太听话，个性很强，像个小霸王，凡事要听从他的指挥。 对于狮子座的孩子，千万不要刺伤他的自尊心，否则他会愈加
       固执地高傲难管，不求进取。要恰到好处地维护他的尊严感，及时赞扬他的优点，一旦他认定了方向、目标，他将认真刻苦地
       学下去，成绩会名列前茅。这会为他打开通向美好未来的大门。 \n\t\t\t事实上，许多有重要成就的人，都出生在狮子座。
       这一星座的孩子，正义感是非感相当强，爱憎分明。在他年少时，父母需谨防他不要上当受骗。在是非没有真正弄清前不要
       错怪他。 \n\t\t\t 狮子座的孩子的弱点是：过分喜欢听恭维的话。 狮子座宝宝的理想出路是：高级职位，如外交、银行、
       交易所、首饰业、高级旅馆业、大型企业、游乐场、艺术博物馆、戏剧团体的领导人等等。 作为父母，应了解到，狮子座
       宝宝傲慢倔强，天生就有王者气概，毫不怀疑自己的举手投足都将影响他人。 \n\t\t\t对待狮子座宝宝，父母既要维护他
       那股子傲气，又要引导他考虑别人的感受，很不容易做到两全其美，但是一旦教育得法，狮子座宝宝会表现得非常出色。
       具有强烈正义感的狮子宝宝，爱憎分明，对他正确的是非判断，父母千万不要用世俗的观点驳斥。\n\n</string>
       
 <string name="shuangyu"> 
       \t\t\t双鱼座孩子的教育问题是不容忽视的。因为这一座的孩子适应能力相当强，他的成长和发展几乎完全取决于他周
       围人的影响。 他顺从，爱幻想，渴望从别人那里得到有益的建议和决定，然后一丝不苟地遵循之。但这并不影响他生活在自
       己的志趣境界里。\n\t\t\t他聪慧、灵活，观察和模仿能力极强，常常会提出令人意想不到的问题。不要以为他不言不语的
       时候，就是可以放心不管的时候，恰恰相反，要以理解和宽容的心，密切注意他，但要适度，因为他非常容易效仿烈士的举动。
       \n\t\t\t 双鱼座宝宝的思想中经常有些模糊不清的概念，最好教他一些逻辑思维的方法，和培养他专心致志的精神和
       能力，这样可避免他以后误入空想和对事业无所追求的趋向。富于想象和逃避现实的愿望，在这一星座的孩子身上表现得尤
       为突出。要提防他结交坏朋友而吸毒或出走。如果能博得他的好感和信赖，他会出色地做好人们对他期望的一切，要充分发
       挥他的善良的本性。 \n\t\t\t双鱼座的宝宝的最好出路是音乐、舞蹈、舞台艺术创作、绘画等所有需要想象力、预知力和
       艺术鉴赏力的职业。慈善事业、兽医、海军、旅馆业或边缘科学的研究工作对其也很适合。 作为父母，应了解到：双鱼座
       宝宝常常三心二意，性格像面团一样容易塑造。做父母的一定要小心谨慎，因为自己的一言一行都会给宝宝造成终身影响。
       \n\t\t\t生性浪漫的双鱼宝宝有很强的艺术鉴赏力和文艺天赋，父母要鼓励他并用实际行动支持他，但是要避免他
       借艺术的名义逃避现实生活。还有，因为双鱼宝宝容易受人影响，要注意他的朋友和环境。\n\n</string>
       
 <string name="shuangzi"> 
       \t\t\t双子座的孩子一刻也闲不住，不是东跑西颠，就是到处看看有什么新鲜事。他的心里象是长了草，很难
       安静下来。除非有什么特别的东西吸引他，或使他忙得不可开交。双子座小鬼的父母最好能经常留心自己孩子的言行和
       举止，注意从身心方面去启发和培养他的灵活性。要有意识地加强这方面训练。\n\t\t\t这一星座的孩子，一般都比
       较聪明，喜欢玩弄概念和勤学好问。他几乎总是表现出与众不同的创造才能和敏锐的感知力，尤其当水星也在双子座的
       时候。一般地说，双子座的孩子喜爱读书。无论什么书，只要能抓到手他就会废寝忘食地读下去。\n\t\t\t 双子座的宝宝
       的最大弱点精力过于分散，许多事情都在吸引和激励着他。要想使他摆脱浮躁不专的毛病，只有加强他的纪律观念，把他
       出色的天赋引向一个确定的目标。\n\t\t\t 双子座的宝宝的理想出路是新闻记者、摄像师、作家、翻译、演说家、旅行
       推销员、商人、经纪人、以及一切与旅行或外国有关的职业。 作为父母，应该了解到，双子座的宝宝可是个小麻烦，他一
       刻也安静不下来，世界对他来说是个巨大的玩具公园，他灵活的头脑和四肢需要来自外界的充分刺激。有了这样的宝宝父母
       可不省心，非得时刻留心宝宝的言行举止别捅搂子不可，不过，只要不出大乱子，还是不要过分干预宝宝的兴趣爱好。\n\t\t\t
       聪明的双子宝宝很会察颜观色，所以，做父母的可不能被他外表的乖巧所迷惑而让他为所欲为。 \n\n</string>
       
 <string name="shuiping">
     \t\t\t所有新事物都会映入水瓶座孩子的眼帘，这可能是个小发明家。他喜欢人们指给他看看，讲给他听听和使他懂
     得其中的道理。他的接受能力极强，很快就会有与众不同的见解和观点。\n\t\t\t 水瓶座的孩子可能聪明过人，也可能
     对所学的知识全无兴趣。这主要取决于学科的内容或他的情绪。这是个比较任性的孩子，他的矛盾心理可能达到登峰造极
     的程度。在倒行逆施"中，他有时会得到一种令人无法理解的满足心理。\n\t\t\t  水瓶座的孩子独立精神很强，总喜欢
     到思想境界中去寻觅自己所需要的东西，而不愿意为物质利益大费心机。在创造和革新方面，许多有利可图的事情在等待
     着他，但他从不迎利而上，而是只做自己喜欢的事。 \n\t\t\t 水瓶座宝宝的理想出路是空间和航空领域，电子、信息、
     电力、摄影、电影、神秘学或哲学、公司以及有关铀或镭的职业。 作为父母，应该了解到：热爱和追寻新鲜事物的水瓶宝
     宝总生活在他自己的梦想里，父母不能嘲笑他，相反，如果可能的话和他一起分享梦想。水瓶宝宝总有与众不同的见解和
     观点，做父母的要懂得这种“不同”的价值。充满好奇心的水瓶宝宝可能会引导父母去发现他们未曾发现的世界，不要拒绝宝
     宝的邀请，他只有在完全信任的情况下才与人分享他的秘密世界。 \n\n</string>
     <string name="tiancheng">
     \t\t\t天秤座的孩子一般都很帅气，讨人喜欢，容易引起别人的钦佩、赞扬和好感。要特别注意防止他滋长一种“小
     皇帝”、一切都要靠别人的思想倾向。因为天赋和魅力往往会使他感到是置身在一个得天独厚的环境中。 只有用温情，
     人们才可能从这个孩子的身上得到所希望的东西。因为粗暴会使他不知所措，他不愿意孤独一人，而需要经常与朋友和伙伴交往。
     \n\t\t\t朝夕相处的朋友将对他的童年生活，甚至命运和未来起着重要作用。 天秤座的孩子在艺术、美学和纯技术科学
     以及法律和医学等方面，容易取得成就。永远不要驱使这种孩子去超越自己的能力极限，但在学习方面要经常不断督促他和
     鼓励他，因为他生性较懒散，容易贪玩而放任自己。 \n\t\t\t跳舞、绘画或到鲜花盛开的花园中散步，这对他来说，要
     比体育锻炼更有利于身心上的平衡。 天秤座宝宝的理想出路是：艺术、戏剧、时装、装潢、自由职业、奢侈品商业(尤其是
     化妆品业)和社会生活。 \n\t\t\t作为父母，应了解到，有一个天秤座宝宝真好，因为这一星座的宝宝通常都很漂亮、聪
     明，带宝宝上街很容易就得到人们的赞扬，没办法，谁让天秤座宝宝外表讨人喜欢呢。 做父母的要时刻警惕自己和宝宝产
     生骄傲的思想，不要以为宝宝有多了不起。多鼓励天秤宝宝和各种不同类型的人交往，让他看到许多自己没有的才艺和技能
     ，才会懂得尊重他人。具备艺术气质的天秤宝宝需要父母用温柔的态度对待他们，不过他懒散的天性是不能纵容的，否则很难
     有大的成就。\n\n</string>
</resources>
