<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_login_white"
        android:orientation="vertical"
        android:padding="20dp">
        <!--android:background="@drawable/img_register_page_bg">-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_h"
                    android:hint="@string/et_phone_number"
                    android:inputType="phone"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_check_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.0"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/et_check_code"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/et_check_code"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/bt_send"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_h"
                android:layout_marginLeft="10dp"
                android:layout_weight="1.0"
                android:background="@drawable/button_back"
                android:layout_gravity="center_vertical"
                android:text="@string/bt_get" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_h"
                    android:hint="@string/et_set_pass"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/bt_regist"
        android:layout_width="150dp"
        android:layout_height="@dimen/height_h"
        android:layout_below="@id/ll_tab"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_back"
        android:text="@string/bt_regist" />


</RelativeLayout>
