<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/img_main_bg">


    <include layout="@layout/toolbar" />


    <LinearLayout
        android:id="@+id/ll_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_login_white"
        android:orientation="vertical"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:padding="10dp">


            <EditText
                android:id="@+id/et_new_pass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_h"
                android:drawableLeft="@drawable/img_close"
                android:drawablePadding="10dp"
                android:hint="@string/et_write_pass_new" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_check_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:visibility="visible">


            <EditText
                android:id="@+id/et_new_pass_again"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_h"
                android:layout_weight="2.0"
                android:drawableLeft="@drawable/img_close"
                android:drawablePadding="10dp"
                android:hint="@string/et_write_pass_again" />


        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/bt_save"
        android:layout_width="150dp"
        android:layout_height="@dimen/height_h"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_back"
        android:text="@string/bt_save" />


</LinearLayout>


